--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html lang="ko-KR">
 <head>
     <meta charset="UTF-8">
-    <title>Home | yumins.github.io</title>
+    <title>yumins.github.io</title>
+    <style>
+        /* CSS Code */
+        body{
+            height: 100vh;
+            background-image: url("./Asset/Comingsoon_image.jpg");
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-size: cover;
+        }
+    </style>
 </head>
 <body>
-    <!--제목 : heading 1~6-->
-    <h1>쇼케이스</h1>
-    <h2 lang="en">Showcase</h2>
-    <!--단락 : paragraph-->
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, illo.</p>
-    
 </body>
 </html>
